# miniature-octo-enigma

./: .gitignore  README.md  app.py  pyproject.toml  server.py
client/: package.json
client/public/: index.html
client/src/: App.js
client/src/components/: BikeMap.jsx  ControlPanel.jsx  DistrictSummary.jsx
client/src/containers/: BikeMap.jsx
data/derived/: current_bluebikes_stations.json
scripts/: stations_csv_to_geojson.py
static/: asset-manifest.json  index.html
static/js/: main.46ad1f55.js  main.9752657d.js  main.af2520c2.js
