[tool.poetry]
name = "mapc-exercise"
version = "0.1.0"
description = "MAPC exercise in which one can explore bluebikes data"
authors = ["Jonathan McKenzie"]
license = "MIT"
readme = "README.md"
packages = [{include = "mapc_exercise"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"


[tool.poetry.group.dev.dependencies]
grip = "^4.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
